--- a/nginx/statics/index.html
+++ b/nginx/statics/index.html
@@ -8,15 +8,10 @@
 </head>
 
 <body>
+    <h1>ホーム</h1>
     <main>
-        <h1>hello world</h1>
-        <button onclick="Login('google')">Google</button>
-        <button onclick="Logout()">ログアウト</button>
+        <a href="./auth/login.html">ログイｎ</a>
     </main>
-
-    <script src="./scripts/pocketbase.umd.js"></script>
-    <script src="./scripts/authsdk.js"></script>
-    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
