レシピの登録と検索で来たかもしれない

--- a/nginx/statics/dev/process.html
+++ b/nginx/statics/dev/process.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>料理登録フォーム</title>
     <link rel="stylesheet" href="process_style.css">
 </head>
+
 <body>
 
-<div class="container">
-    <h1>料理登録フォーム</h1>
-    <form id="recipeForm">
+    <div class="container">
+        <h1>料理登録フォーム</h1>
+        <form id="recipeForm">
+            <label for="recipeCategory">料理の項目:</label>
+            <select id="recipeCategory" name="recipeCategory" required>
+                <option value="" disabled selected>選択してください</option>
+                <option value="主食">主食</option>
+                <option value="主菜">主菜</option>
+                <option value="副菜">副菜</option>
+                <option value="汁物">汁物</option>
+            </select>
 
-        <label for="recipeName">料理名:</label>
-        <input type="text" id="recipeName" name="recipeName" required>
-        
-        <label for="recipeImage">料理の画像:</label>
-        <input type="file" id="recipeImage" name="recipeImage" accept="image/*">
-        
-        <div id="stepsContainer">
-            <h2>料理手順</h2>
-            <div id="stepsList"></div> <!-- 手順を表示する場所を囲むdiv -->
-            <div id="addStepContainer" style="display: flex; justify-content: space-between; margin-bottom: 20px;">
-                <button type="button" class="add-button" onclick="addStep()">+ 手順を追加</button>
-                <button type="button" class="add-button" onclick="saveDraft()">下書きを保存</button>
+            <label for="recipeName">料理名:</label>
+            <input type="text" id="recipeName" name="recipeName" required>
+
+            <label for="recipeImage">料理の画像:</label>
+            <input type="file" id="recipeImage" name="recipeImage" accept="image/*">
+
+            <label for="finalState">レシピの最終状態:</label>
+            <select id="finalState" name="finalState" required>
+                <option value="" disabled selected>選択してください</option>
+                <option value="Hot">Hot</option>
+                <option value="Reheat">Reheat</option>
+                <option value="Cool">Cool</option>
+                <option value="Normal">Normal</option>
+            </select>
+
+
+            <div id="stepsContainer">
+                <h2>料理手順</h2>
+                <div id="stepsList"></div> <!-- 手順を表示する場所を囲むdiv -->
+                <div id="addStepContainer" style="display: flex; justify-content: space-between; margin-bottom: 20px;">
+                    <button type="button" class="add-button" onclick="addStep()">+ 手順を追加</button>
+                    <button type="button" class="add-button" onclick="saveDraft()">下書きを保存</button>
+                </div>
             </div>
-        </div>
 
-        <button type="submit" class="submit-button">料理を登録</button>
-    </form>
-</div>
+            <button type="submit" class="submit-button">料理を登録</button>
+        </form>
+    </div>
 
-<script src="process_script.js"></script>
+    <script src="process_script.js"></script>
 
 </body>
+
 </html>
