レシピ検索を追加

--- a/nginx/statics/main/index.html
+++ b/nginx/statics/main/index.html
@@ -14,6 +14,7 @@
     </div>
 
     <button onclick="DoLogout()">ログアウト</button>
+    <button onclick="TestSearch()">検索テスト</button>
 
     <!-- pocketbase のメイン -->
     <script src="/statics/auth/scripts/pocketbase.umd.js"></script>
