カテゴリ検索できた

--- a/nginx/statics/main/index.html
+++ b/nginx/statics/main/index.html
@@ -15,6 +15,7 @@
 
     <button onclick="DoLogout()">ログアウト</button>
     <button onclick="TestSearch()">検索テスト</button>
+    <button onclick="TestCategorySearch()">カテゴリ検索</button>
 
     <!-- pocketbase のメイン -->
     <script src="/statics/auth/scripts/pocketbase.umd.js"></script>
