pocketbase のバージョンを変更

--- a/nginx/statics/dev/index.html
+++ b/nginx/statics/dev/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="./register.html">レシピ登録</a>
     <a href="./process.html">手順登録</a>
+    <a href="./list.html">レシピ管理</a>
 </body>
 </html>
