レシピの編集を追加

--- a/nginx/statics/dev/process.html
+++ b/nginx/statics/dev/process.html
@@ -63,7 +63,7 @@
     <script src="/statics/auth/scripts/authsdk.js"></script>
 
     <!-- 各種設定 -->
-    <script src="process_script.js"></script>
+    <script src="./process_script.js"></script>
 
 </body>
 
